tests/ui/generic-associated-types/issue-87429-specialization.stderr
error[E0277]: can't compare `Foo` with `Foo`
  --> $DIR/issue-87429-specialization.rs:19:31
   |
LL |     default type Member<'a> = Foo;
   |                               ^^^ no implementation for `Foo == Foo`
   |
   = help: the trait `PartialEq` is not implemented for `Foo`
note: required by a bound in `Family::Member`
  --> $DIR/issue-87429-specialization.rs:6:22
   |
LL |     type Member<'a>: for<'b> PartialEq<Self::Member<'b>>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Family::Member`
help: consider annotating `Foo` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
